--- a/templates/app_folder/product_list.html
+++ b/templates/app_folder/product_list.html
@@ -18,6 +18,7 @@
             <h2>{{ product.name }}</h2>
             <p>在庫: {{ product.stock }}</p>
             <!-- 商品IDをdata-id属性に保存 -->
+            {% csrf_token %}
             <button data-id="{{ product.id }}">在庫を減少させる</button>
         </div>
         {% endfor %}
